--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,1 +1,8 @@
-{"APPLICATION_URL":"https://dev.orgbook.gov.bc.ca","API_URL":"","BASE_HREF":"","DISPLAY_TIMEZONE":"","THEME":"bcgov","TOPIC_CREDS_FORMAT":"timeline"}
+{
+    "APPLICATION_URL": "https://dev.orgbook.gov.bc.ca",
+    "API_URL": "",
+    "BASE_HREF": "",
+    "DISPLAY_TIMEZONE": "",
+    "THEME": "bcgov",
+    "TOPIC_CREDS_FORMAT": "timeline"
+}
