Update config to point to correct API URL
Signed-off-by: Akiff Manji <akiff.manji@gmail.com>

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,6 +1,6 @@
 {
     "APPLICATION_URL": "https://dev.orgbook.gov.bc.ca",
-    "API_URL": "",
+    "API_URL": "https://dev.orgbook.gov.bc.ca/api",
     "BASE_HREF": "",
     "DISPLAY_TIMEZONE": "",
     "THEME": "bcgov",
