Address review comments on manage script and docker compose configs
Signed-off-by: Akiff Manji <akiff.manji@gmail.com>

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "node build-config.js && ng serve",
+    "build": "node build-config.js && ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
