--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,9 +16,13 @@ services:
       - WEB_BASE_HREF=${WEB_BASE_HREF}
       - WEB_DEPLOY_URL=${WEB_DEPLOY_URL}
     networks:
+      - web
       - vcr
     ports:
       - "${WEB_HTTP_PORT}:8080"
 
 networks:
+  web:
   vcr:
+    external:
+      name: vcr_vcr
