--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,8 +1,8 @@
 {
-    "APPLICATION_URL": "https://dev.orgbook.gov.bc.ca",
-    "API_URL": "https://dev.orgbook.gov.bc.ca/api",
-    "BASE_HREF": "",
-    "DISPLAY_TIMEZONE": "",
-    "THEME": "bcgov",
+    "APPLICATION_URL": "${APPLICATION_URL}",
+    "API_URL": "${API_URL}",
+    "BASE_HREF": "${WEB_BASE_HREF}",
+    "DISPLAY_TIMEZONE": "${DISPLAY_TIMEZONE}",
+    "THEME": "${THEME}",
     "TOPIC_CREDS_FORMAT": "timeline"
 }
