Proxy configurations for requests to `/api`
Signed-off-by: Akiff Manji <akiff.manji@gmail.com>

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node build-config.js && ng serve",
-    "build": "node build-config.js && ng build",
+    "build": "node build-config.js && ng build --prod --base-href ${NG_BASE_HREF:-/} --deploy-url ${NG_DEPLOY_URL:-/} ${NG_BUILD_FLAGS:-}",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
