--- a/angular.json
+++ b/angular.json
@@ -117,7 +117,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "vcr-web:build",
-            "port": 4300
+            "proxyConfig": "proxy.conf.json",
+            "port": 4200
           },
           "configurations": {
             "production": {
