--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,6 +1,6 @@
 {
     "APPLICATION_URL": "${APPLICATION_URL}",
-    "API_URL": "https://test.orgbook.gov.bc.ca/api",
+    "API_URL": "${API_URL}",
     "BASE_HREF": "${WEB_BASE_HREF}",
     "DISPLAY_TIMEZONE": "${DISPLAY_TIMEZONE}",
     "THEME": "${THEME}",
